2013-08-12  Juanma Barranquero  <lekktu@gmail.com>

	* xml.el (xml-parse-tag-1): Use looking-at (this reverts change in
	revno:113793, which breaks the test suite).
	https://lists.gnu.org/archive/html/emacs-devel/2013-08/msg00263.html

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* term/w32-win.el (dynamic-library-alist): Add DLLs for zlib.

2013-08-12  Glenn Morris  <rgm@gnu.org>

	* format.el (format-annotate-function):
	Handle read-only text properties in the source.  (Bug#14887)

2013-08-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-display-html): Ignore coding system errors.  One
	web site uses "utf-8lias" as the coding system.

2013-08-11  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-valid-p): Fix check; STATES can indeed be nil.

2013-08-10  Juanma Barranquero  <lekktu@gmail.com>

	* tutorial.el (tutorial--describe-nonstandard-key): Use string-match-p.
	(tutorial--detailed-help): Remove unused local variables.
	(tutorial--save-tutorial-to): Use ignore-errors.
	(help-with-tutorial): Use looking-at-p.

	* view.el (view-buffer-other-window, view-buffer-other-frame):
	Mark unused arguments.

	* woman.el (woman-parse-colon-path, woman-parse-colon-path)
	(woman-select-symbol-fonts, woman, woman-find-file)
	(woman-insert-file-contents, woman-non-underline-faces):
	Use string-match-p.
	(woman1-unquote): Move declaration.

	* xml.el (xml-parse-tag-1, xml-parse-string): Use looking-at-p.
	(xml-parse-dtd): Use looking-at-p, string-match-p.  Mark unused
	argument.  Remove unused local variable.
	(xml-parse-elem-type): Use string-match-p.
	(xml-substitute-numeric-entities): Use ignore-errors.

	* calculator.el (calculator): Mark unused argument.
	(calculator-paste, calculator-quit, calculator-integer-p):
	Use ignore-errors.
	(calculator-string-to-number, calculator-decimal, calculator-exp)
	(calculator-op-or-exp): Use string-match-p.

	* dired.el (dired-buffer-more-recently-used-p): Declare.